@@ -34,7 +34,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"     Sccsid: @(#)nail.1	2.300 (gritter) 6/9/05
+.\"     Sccsid: @(#)nail.1	2.301 (gritter) 6/9/05
 .\"
 .TH NAIL 1 "6/9/05" "nail 11.23" "User Commands"
 .SH NAME
@@ -2328,8 +2328,8 @@ as the terminator of a message the user is sending.
 .B editheaders
 When a message is edited while being composed,
 its header is included in the editable text.
-`To:', `Cc:', `Bcc:', and `Subject:' fields
-are accepted within the header,
+`To:', `Cc:', `Bcc:', `Subject:', `From:', `Reply-To:', and 'Organization:'
+fields are accepted within the header,
 other fields are ignored.
 .TP
 .B emptybox
